<resources>
    <string name="app_name" translatable="false">WideWall</string>
    <string name="facebook_app_id" translatable="false">231459137418544</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb231459137418544</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_bottom_nav" translatable="false">BottomNav</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_user_profile_informaion" translatable="false">UserProfileInformaion</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_user_profile" translatable="false">UserProfile</string>
    <string name="title_activity_volcano" translatable="false">Volcano</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_planet_but_also_home" translatable="false">PlanetButAlsoHome</string>
    <string name="title_activity_tutorial_one_shot" translatable="false">TutorialOneShot</string>
    <string name="too_kind_to_block_anyone">Too kind to block anyone</string>
    <string name="favorites_list_is_empty">Favorites List is empty</string>
    <string name="upload_my_picture">Upload my Picture</string>
    <string name="biography">biography</string>
    <string name="_09_09_1989">09/09/1989</string>
    <string name="nickname">nickname</string>
    <string name="search_by_nickname">Search by Nickname</string>
    <string name="i_agree_widewall_terms_and_conditions">I Agree WideWall Terms And Conditions</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="too_cute_to_talk_to_anyone">Too cute to talk to anyone !</string>
    <string name="notification_list_still_empty">Notification list still empty</string>
    <string name="start_to_full_this_list_with_love">Start to full this list with love</string>
    <string name="you_have_not_written_posts_yet">You have not written posts yet</string>
    <string name="recording">Recording</string>
    <string name="reset">Reset</string>
    <string name="check_internet">Check Internet</string>
    <string name="you_are_suspended">You are suspended</string>
    <string name="some_thing_went_wrong_try_again_later">Sorry Something went bad , try again later !!</string>
    <string name="you_must_login_first">you must login first</string>
    <string name="welcome">Welcome</string>
    <string name="try_another_nickname">Try another nickname</string>
    <string name="picture_uploaded">Picture Uploaded</string>
    <string name="failed">Failed</string>
    <string name="permission_granted">permission granted</string>
    <string name="permission_denied">permission denied</string>
    <string name="save_your_information_first">Save your Information First !</string>
    <string name="agree_wide_wall_terms_and_conditions">Agree WideWall Terms and Conditions</string>
    <string name="handle_must_not_be_empty_or_less_than_four_letters">Handle must not be empty or less than 4 letters</string>
    <string name="try_another_one">Try another one</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="block_list">Block List</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="volcano">Volcano</string>
    <string name="communicate">Communicate</string>
    <string name="ads">ads</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="logout">Logout</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="follows_you">Follows You</string>
    <string name="posts">Posts</string>
    <string name="liked">Liked</string>
    <string name="new_message_from">New Message From</string>
    <string name="new_notification_from">New Notification From</string>
</resources>
