<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav_stuff.MyProfileSettings"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/ourWhite"
    android:weightSum="8">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:gravity="center"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center">

                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:src="@mipmap/press_back_white"
                    android:id="@+id/press_back"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:id="@+id/profilePicInToolBar"
                    tools:ignore="ContentDescription" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center">

                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:src="@mipmap/settings"
                    android:id="@+id/getTheTopOfList"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </LinearLayout>




    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3"
        android:orientation="horizontal">


        <View
            android:layout_width="15dp"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.CardView
            android:layout_width="138dp"
            android:layout_height="138dp"
            app:cardCornerRadius="19dp"
            app:cardElevation="6dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/fab"
            android:layout_gravity="center"
            android:background="@color/redA700">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/myProfilePictureInProfileSetting"
                tools:ignore="ContentDescription" />
        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            tools:ignore="NestedWeights">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:id="@+id/saveProfileSetting"
                android:text="@string/upload_my_picture"
                android:textColor="@color/ourWhite"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/aviLay">


        <com.wang.avi.AVLoadingIndicatorView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AVLoadingIndicatorView.Large"
            app:indicatorName="LineScalePulseOutRapidIndicator"
            app:indicatorColor="@color/redA700" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="5"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            tools:ignore="NestedWeights">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text"
                android:drawableStart="@mipmap/nickname"
                android:id="@+id/myNickNameInProfileSetting"
                android:inputType="textPersonName"
                android:maxLength="18"
                android:minLines="1"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/save"
                android:id="@+id/saveMyNickname"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/done"
                android:id="@+id/doneMyNickname"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text"
                android:drawableStart="@mipmap/email"
                android:id="@+id/myHandleInProfileSetting"
                android:maxLength="18"
                android:gravity="center|start"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_1234567890"
                android:minLines="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/save"
                android:id="@+id/saveMyHandle"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/done"
                android:id="@+id/doneMyHandle"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text"
                android:drawableStart="@mipmap/information"
                android:id="@+id/myInfoInProfileSetting"
                android:maxLength="90"
                android:minLines="1"
                android:hint="@string/biography"/>
        </LinearLayout>





        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/save"
                android:id="@+id/saveMyBio"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/done"
                android:id="@+id/doneMyBio"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="5"
        android:baselineAligned="false">




        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text"
                android:drawableStart="@mipmap/link"
                android:id="@+id/myLinkInProfileSetting"
                android:maxLength="50"
                android:minLines="1"
                android:hint="widewallonline.wordpress.com" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/save"
                android:id="@+id/saveMyWebsite"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />


            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/done"
                android:id="@+id/doneMyWebsite"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text"
                android:drawableStart="@mipmap/age"
                android:id="@+id/myBirthdateInProfileSetting"
                android:minLines="1"
                android:hint="@string/_09_09_1989"
                android:inputType="date"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/save"
                android:id="@+id/saveMyBirthdate"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/done"
                android:id="@+id/doneMyBirthdate"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>